@@ -1,0 +1,12 @@
+:mod:`webob.client` -- Send WSGI requests over HTTP
+===================================================
+
+.. automodule:: webob.client
+
+Client
+------
+
+.. autoclass:: SendRequest
+   :members:
+
+.. autoclass:: send_request
