@@ -7,16 +7,10 @@ from webob.compat import url_quote
 import socket
 from webob import exc
 
-__all__ = ['send_request_app']
-
-# Remove these headers from response (specify lower case header
-# names):
-filtered_headers = (
-    'transfer-encoding',
-)
+__all__ = ['send_request_app', 'SendRequest']
 
 
-def send_request_app(environ, start_response):
+class SendRequest:
     """
     Sends the request, as described by the environ, over actual HTTP.
     All controls about how it is sent are contained in the request
@@ -30,117 +24,143 @@ def send_request_app(environ, start_response):
     the request (to, for example, 10 seconds).
 
     Does not add X-Forwarded-For or other standard headers
+
+    If you use ``send_request_app`` then simple ``httplib``
+    connections will be used.  If you use
+    ``SendRequest.with_urllib()`` you will get an application that
+    uses urllib3's connection classes, that include pooling and HTTPS
+    certificate verification.
     """
-    scheme = environ['wsgi.url_scheme']
-    if scheme == 'http':
-        ConnClass = httplib.HTTPConnection
-    elif scheme == 'https':
-        ConnClass = httplib.HTTPSConnection
-    else:
-        raise ValueError(
-            "Unknown scheme: %r" % scheme)
-    if 'SERVER_NAME' not in environ:
-        host = environ.get('HTTP_HOST')
-        if not host:
+
+    def __init__(self, HTTPConnection=httplib.HTTPConnection,
+                 HTTPSConnection=httplib.HTTPSConnection):
+        self.HTTPConnection = HTTPConnection
+        self.HTTPSConnection = HTTPSConnection
+
+    @classmethod
+    def with_urllib3(cls):
+        from urllib3 import HTTPConnectionPool, HTTPSConnectionPool
+        return cls(HTTPConnectionPool, HTTPSConnectionPool)
+
+    def __call__(self, environ, start_response):
+        scheme = environ['wsgi.url_scheme']
+        if scheme == 'http':
+            ConnClass = httplib.HTTPConnection
+        elif scheme == 'https':
+            ConnClass = httplib.HTTPSConnection
+        else:
             raise ValueError(
-                "environ contains neither SERVER_NAME nor HTTP_HOST")
-        if ':' in host:
-            host, port = host.split(':', 1)
-        else:
-            if scheme == 'http':
-                port = '80'
-            else:
-                port = '443'
-        environ['SERVER_NAME'] = host
-        environ['SERVER_PORT'] = port
-    kw = {}
-    if sys.version_info >= (2, 7) and 'webob.client.timeout' in environ:
-        kw['timeout'] = environ['webob.client.timeout']
-    conn = ConnClass('%(SERVER_NAME)s:%(SERVER_PORT)s' % environ, **kw)
-    headers = {}
-    for key, value in environ.items():
-        if key.startswith('HTTP_'):
-            key = key[5:].replace('_', '-').title()
-            headers[key] = value
-    path = (url_quote(environ.get('SCRIPT_NAME', ''))
-            + url_quote(environ.get('PATH_INFO', '')))
-    if environ.get('QUERY_STRING'):
-        path += '?' + environ['QUERY_STRING']
-    try:
-        content_length = int(environ.get('CONTENT_LENGTH', '0'))
-    except ValueError:
-        content_length = 0
-    ## FIXME: there is no streaming of the body, and that might be useful
-    ## in some cases
-    if content_length:
-        body = environ['wsgi.input'].read(content_length)
-    else:
-        body = ''
-    headers['Content-Length'] = content_length
-    if environ.get('CONTENT_TYPE'):
-        headers['Content-Type'] = environ['CONTENT_TYPE']
-    if not path.startswith("/"):
-        path = "/" + path
-    try:
-        conn.request(environ['REQUEST_METHOD'],
-                     path, body, headers)
-    except socket.error as e:
-        if e.args[0] == -2:
-            # Name or service not known
-            resp = exc.HTTPBadGateway(
-                "Name or service not known (bad domain name: %s)"
-                % environ['SERVER_NAME'])
-            return resp(environ, start_response)
-        elif e.args[0] == 61:
-            # Connection refused
-            resp = exc.HTTPBadGateway(
-                "Connection refused")
-            return resp(environ, start_response)
-        raise
-    res = conn.getresponse()
-    headers_out = parse_headers(res.msg)
-    status = '%s %s' % (res.status, res.reason)
-    start_response(status, headers_out)
-    length = res.getheader('content-length')
-    # FIXME: This shouldn't really read in all the content at once
-    if length is not None:
-        body = res.read(int(length))
-    else:
-        body = res.read()
-    conn.close()
-    return [body]
-
-
-def parse_headers(message):
-    """
-    Turn a Message object into a list of WSGI-style headers.
-    """
-    headers_out = []
-    if sys.version_info > (3, 0):
-        headers = message._headers
-    else:
-        headers = message.headers
-    for full_header in headers:
-        if not full_header:
-            # Shouldn't happen, but we'll just ignore
-            continue
-        if full_header[0].isspace():
-            # Continuation line, add to the last header
-            if not headers_out:
+                "Unknown scheme: %r" % scheme)
+        if 'SERVER_NAME' not in environ:
+            host = environ.get('HTTP_HOST')
+            if not host:
                 raise ValueError(
-                    "First header starts with a space (%r)" % full_header)
-            last_header, last_value = headers_out.pop()
-            value = last_value + ', ' + full_header.strip()
-            headers_out.append((last_header, value))
-            continue
-        if isinstance(full_header, tuple):
-            header, value = full_header
+                    "environ contains neither SERVER_NAME nor HTTP_HOST")
+            if ':' in host:
+                host, port = host.split(':', 1)
+            else:
+                if scheme == 'http':
+                    port = '80'
+                else:
+                    port = '443'
+            environ['SERVER_NAME'] = host
+            environ['SERVER_PORT'] = port
+        kw = {}
+        if sys.version_info >= (2, 7) and 'webob.client.timeout' in environ:
+            kw['timeout'] = environ['webob.client.timeout']
+        conn = ConnClass('%(SERVER_NAME)s:%(SERVER_PORT)s' % environ, **kw)
+        headers = {}
+        for key, value in environ.items():
+            if key.startswith('HTTP_'):
+                key = key[5:].replace('_', '-').title()
+                headers[key] = value
+        path = (url_quote(environ.get('SCRIPT_NAME', ''))
+                + url_quote(environ.get('PATH_INFO', '')))
+        if environ.get('QUERY_STRING'):
+            path += '?' + environ['QUERY_STRING']
+        try:
+            content_length = int(environ.get('CONTENT_LENGTH', '0'))
+        except ValueError:
+            content_length = 0
+        ## FIXME: there is no streaming of the body, and that might be useful
+        ## in some cases
+        if content_length:
+            body = environ['wsgi.input'].read(content_length)
         else:
-            try:
-                header, value = full_header.split(':', 1)
-            except:
-                raise ValueError("Invalid header: %r" % (full_header,))
-        value = value.strip()
-        if header.lower() not in filtered_headers:
-            headers_out.append((header, value))
-    return headers_out
+            body = ''
+        headers['Content-Length'] = content_length
+        if environ.get('CONTENT_TYPE'):
+            headers['Content-Type'] = environ['CONTENT_TYPE']
+        if not path.startswith("/"):
+            path = "/" + path
+        try:
+            conn.request(environ['REQUEST_METHOD'],
+                         path, body, headers)
+        except socket.error as e:
+            if e.args[0] == -2:
+                # Name or service not known
+                resp = exc.HTTPBadGateway(
+                    "Name or service not known (bad domain name: %s)"
+                    % environ['SERVER_NAME'])
+                return resp(environ, start_response)
+            elif e.args[0] == 61:
+                # Connection refused
+                resp = exc.HTTPBadGateway(
+                    "Connection refused")
+                return resp(environ, start_response)
+            raise
+        res = conn.getresponse()
+        headers_out = self.parse_headers(res.msg)
+        status = '%s %s' % (res.status, res.reason)
+        start_response(status, headers_out)
+        length = res.getheader('content-length')
+        # FIXME: This shouldn't really read in all the content at once
+        if length is not None:
+            body = res.read(int(length))
+        else:
+            body = res.read()
+        conn.close()
+        return [body]
+
+    # Remove these headers from response (specify lower case header
+    # names):
+    filtered_headers = (
+        'transfer-encoding',
+    )
+
+    def parse_headers(self, message):
+        """
+        Turn a Message object into a list of WSGI-style headers.
+        """
+        headers_out = []
+        if sys.version_info > (3, 0):
+            headers = message._headers
+        else:
+            headers = message.headers
+        for full_header in headers:
+            if not full_header:
+                # Shouldn't happen, but we'll just ignore
+                continue
+            if full_header[0].isspace():
+                # Continuation line, add to the last header
+                if not headers_out:
+                    raise ValueError(
+                        "First header starts with a space (%r)" % full_header)
+                last_header, last_value = headers_out.pop()
+                value = last_value + ', ' + full_header.strip()
+                headers_out.append((last_header, value))
+                continue
+            if isinstance(full_header, tuple):
+                header, value = full_header
+            else:
+                try:
+                    header, value = full_header.split(':', 1)
+                except:
+                    raise ValueError("Invalid header: %r" % (full_header,))
+            value = value.strip()
+            if header.lower() not in self.filtered_headers:
+                headers_out.append((header, value))
+        return headers_out
+
+
+send_request_app = SendRequest()
