@@ -17,8 +17,10 @@ News
   (similar to ``Response.text``).
 
 * Add ``webob.client`` which contains the WSGI application
-  ``send_request_app``.  All requests sent to this application are
-  turned into HTTP requests.
+  ``send_request_app`` and ``SendRequest``.  All requests sent to this
+  application are turned into HTTP requests.  You can also use
+  ``SendRequest.with_urllib3()`` to use `urllib3
+  <http://pypi.python.org/pypi/urllib3>`_ for connections.
 
 * Renamed ``Request.get_response(app)`` to ``Request.send(app)``.  The
   ``.get_response()`` name is still available.
